--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
         body{
         background-color: #526D82;
         }
+        @media (max-width: 600px) {
+      .container{
+        display: flex;
+        flex-direction: column-reverse;
+        float: left;
+      }
+    }
         header{
             display: flex;
 
